<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/response_received_from_web_socket"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_stroke_black_radius_4dp"
            android:padding="5dp"
            android:textSize="16sp"
            tools:text="response" />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:hint="@string/enter_text"
            android:maxLines="1"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/send_text" />

        <Button
            android:id="@+id/btn_start_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/enable_location_service_and_send_to_websocket" />

        <Button
            android:id="@+id/btn_stop_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/stop_location_service" />
    </LinearLayout>

</layout>